Fixing compilation warning "unused parameter" in WebPageProxy.cpp https://bugs.webkit.org/show_bug.cgi?id=120205

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-08-26
Reviewed by Anders Carlsson.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::findPlugin):
(WebKit::WebPageProxy::didBlockInsecurePluginVersion):
Added UNUSED_PARAM to avoid warning.

Canonical link: https://commits.webkit.org/138309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154660 268f45cc-cd09-0410-ab3c-d52691b4dbfc